--- a/models/research/object_detection/samples/configs/ssd_mobilenet_v1_pets.config
+++ b/models/research/object_detection/samples/configs/ssd_mobilenet_v1_pets.config
@@ -191,6 +191,6 @@ eval_input_reader: {
     input_path: "/data/HataFeng/csdn-ai-w8-data/pet_val.record"
   }
   label_map_path: "/data/HataFeng/csdn-ai-w8-data/labels_items.txt"
-  shuffle: true
+  shuffle: false
   num_readers: 1
 }
