label map add item

--- a/models/research/object_detection/samples/configs/ssd_mobilenet_v1_pets.config
+++ b/models/research/object_detection/samples/configs/ssd_mobilenet_v1_pets.config
@@ -176,7 +176,7 @@ train_input_reader: {
   tf_record_input_reader {
     input_path: "/data/HataFeng/csdn-ai-w8-data/pet_train.record"
   }
-  label_map_path: "/data/HataFeng/csdn-ai-w8-data/pet_label_map.pbtxt"
+  label_map_path: "./object_detection/labels_items.txt"
 }
 
 eval_config: {
@@ -190,7 +190,7 @@ eval_input_reader: {
   tf_record_input_reader {
     input_path: "/data/HataFeng/csdn-ai-w8-data/pet_val.record"
   }
-  label_map_path: "/data/HataFeng/csdn-ai-w8-data/labels_items.txt"
+  label_map_path: "./object_detection/labels_items.txt"
   shuffle: false
   num_readers: 1
 }
