--- a/models/research/object_detection/samples/configs/ssd_mobilenet_v1_pets.config
+++ b/models/research/object_detection/samples/configs/ssd_mobilenet_v1_pets.config
@@ -174,7 +174,7 @@ train_config: {
 
 train_input_reader: {
   tf_record_input_reader {
-    input_path: "/data/HataFeng/csdn-ai-w8-data/pet_train.record"
+    input_path: "./pet_train.record"
   }
   label_map_path: "./object_detection/data/labels_items.txt"
 }
@@ -188,7 +188,7 @@ eval_config: {
 
 eval_input_reader: {
   tf_record_input_reader {
-    input_path: "/data/HataFeng/csdn-ai-w8-data/pet_val.record"
+    input_path: "./pet_val.record"
   }
   label_map_path: "./object_detection/data/labels_items.txt"
   shuffle: false
